# Arxiv2Arxode

./: .env.sample  .gitignore  README.md  additional_retries_a2a_turbo.jsonl  agents.py  arxiv_paper.py  arxiv_search.py  asdasda.md  cfg.toml  create_embeddings_sample.ipynb  curr_usage.py  demo.ipynb  demo.py  docker-compose.yml  embeddings.py  env.yml  environment.yml  main.py  notmain.py  pre_proc_pdfs.py  pyproject.toml  research_team_conversations.json  run.sh  sample_output.txt  setup.py  temp.ipynb  tree.txt  untitled.py
.github/workflows/: black_lint.yml
agents/: __init__.py  agent.py  agent_conf.py  agents.py  coordinator.py  functions.py
arxiv2arxode/: __init__.py
arxiv2arxode/agents/: agent.py  agent_conf.py  coordinator.py
arxiv2arxode/lib/: embeddings.py
arxiv2arxode/lib/eval/: baseclaudeeval.py  basegpteval.ipynb
arxiv2arxode/lib/eval/MLBench/: MLBench_eval.py  eval.ipynb  init.ipynb
arxiv2arxode/lib/eval/v0/: analysis.py  compile_and_fig_gen.py  gpt_code_review_4all.ipynb
arxiv2arxode/utils/: code.py  misc.py
arxiv2arxode/utils/arxiv/: arxiv_paper.py  arxiv_search.py
lib/: a2a.py  curr_usage.py  embeddings.py  functions.py
lib/eval/: analysis.py  basegpteval.ipynb  basegpteval.py  code_complexity.py  code_semantics.py  compile_and_fig_gen.py  gpt_code_review_4all.ipynb  summary_stats.ipynb
lib/eval/MLBench/: MLBench_eval.py  eval.ipynb  init.ipynb  test_MLBench_eval.py
lib/eval/stats/: final.json
lib/eval/stats/code_complexity/: cc_a2a_gpt4.json  cc_a2a_turbo.json  cc_baseGPT.json  cc_base_turbo.json
lib/eval/stats/gpt_code_review/: t.json  task1.json
lib/eval/stats/tasks_and_code_exe_results/: combined_stats_a2a.jsonl  combined_stats_a2a_turbo.jsonl  combined_stats_baseGPT.jsonl  combined_stats_base_turbo.jsonl
lib/eval/v0/: code_complexity.py  readme.txt
notebooks/: TruLensInit.ipynb  demo.ipynb  emb_based_eval_init.ipynb  reference_GAT.py
prompts/: code_template.txt  curr_agent_prompt.txt  init_agent.txt  reflection.txt  retrieved_code.txt
sandbox/: agent_tuning_example.py  agent_tuning_simulation.py  code_gen_353.py  code_gen_523.py  code_gen_649.py  generated_story.txt  hf_eval.py  interaction_trajectories.txt  minimal_agent_tuning.py  minimal_agent_tuning_simulation.py  readme.txt  t.py
utils/: misc.py  tokentrack.py  utils.py
utils/arxiv/: arxiv_search.py
