[tool.poetry]
name = "arxiv2arxode"
version = "0.4.0"
description = "Intelligent Code Generation"
authors = ["Abdulla <abdullabloushi@gmail.com>"]
license = "UNLICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10, <3.13"
openai = "^1.3.4"
pydantic = "^2.5.2"
isort = "^5.12.0"
langchain = "^0.2"
nest-asyncio = "^1.5.8"
chromadb = "^0.4.18"
diskcache = "^5.6.3"
pyautogen = { extras = ["anthropic"], version = "^0.3.0" }
pypdf = "<=4.0.1"
pgvector = "^0.2.4"
arxiv = "^2.1.0"
urllib3 = "^2.0"
psycopg2-binary = "^2.9.9"
unstructured = { extras = ["pdf"], version = "^0.15" }
radon = "^6.0.1"
seaborn = "^0.13.2"
transformers = "^4.43.3"
datasets = "^2.20.0"
huggingface = "^0.0.1"
langchain-core = "^0.2.25"
accelerate = "^0.33.0"
sentencepiece = "^0.2.0"
pyopenssl = "^24.2.1"
cryptography = "^43.0.0"
trulens = "^0.13.4"
trulens-eval = "^0.33.0"
langchain-openai = "^0.1.20"
black = "^24.4.2"
psycopg = "^3.2.1"
langchain-community = "^0.2.11"
pytesseract = "^0.3.10"
nltk = "^3.8.2"
importlib-metadata = "7.0.0"
pettingzoo = "^1.24.3"
gymnasium = "^0.29.1"
supersuit = "^3.9.3"
autogenbench = "^0.0.3"
ray = { extras = ["default"], version = "^2.35.0" }
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
